# driving-world-model

./: .gitignore  README.md  main.py  pyproject.toml  train.py
Report/: main.bbl  main.blg  main.tex  references.bib
configs/: config.yaml  hyperparameters.yml
runs/car_racing/: config.yml
runs/car_racing/eval/: best_reward.txt
runs/car_racing/tensorboard/: events.out.tfevents.1776530025.PepeOmen.26940.0  events.out.tfevents.1776530106.PepeOmen.20268.0  events.out.tfevents.1776530311.PepeOmen.29592.0  events.out.tfevents.1776532123.AA25LABIAP01.503588.0  events.out.tfevents.1776532625.AA25LABIAP01.506996.0  events.out.tfevents.1776532663.AA25LABIAP01.507398.0  events.out.tfevents.1776532827.AA25LABIAP01.508798.0  events.out.tfevents.1776533221.AA25LABIAP01.512727.0  events.out.tfevents.1776533324.AA25LABIAP01.514776.0  events.out.tfevents.1776534197.AA25LABIAP01.520372.0  events.out.tfevents.1776542620.AA25LABIAP01.593964.0  events.out.tfevents.1776553758.AA25LABIAP01.720595.0  events.out.tfevents.1776553963.AA25LABIAP01.724585.0
runs/car_racing2/: config.yml
runs/car_racing2/eval/: best_reward.txt
runs/car_racing2/tensorboard/: events.out.tfevents.1776558015.AA25LABIAP01.768018.0
runs/hopper_v5/: config.yml
runs/hopper_v5/eval/: best_reward.txt
runs/hopper_v5/tensorboard/: events.out.tfevents.1776632762.PepeOmen.11528.0  events.out.tfevents.1776638067.PepeOmen.13640.0  (+1 more)
runs/walker_walk/: config.yml
scripts/: generate_video_frames.py
src/: agent.py  buffer.py  distributions.py  envs.py  networks.py  rssm.py  tools.py
(+23 files in other folders)
