[project]
name = "driving-world-model"
version = "0.1.0"
description = "Minimal R2-Dreamer reimplementation for DMC Vision"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4",
    "torchrl>=0.9",
    "tensordict>=0.9",
    "dm-control>=1.0",
    "mujoco>=3.0",
    "gymnasium[box2d]>=1.0",
    "numpy>=1.23",
    "opencv-python>=4.7",
    "tensorboard>=2.17",
    "einops>=0.3",
    "pyyaml>=6.0",
    "imageio[ffmpeg]>=2.31",
    "matplotlib>=3.7",
]
